samples/_failures_safe/1761500565_8f38e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1f19e68.c: In function ‘main’:
./samples/SAFE/__tmp_d1f19e68.c:164:5: error: expected expression at end of input
  164 |     for (int start =
      |     ^~~
./samples/SAFE/__tmp_d1f19e68.c:164:5: error: expected declaration or statement at end of input
